[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/mapa.gd" type="Script" id=1]
[ext_resource path="res://img/Fundo-Celular.png" type="Texture" id=2]
[ext_resource path="res://Celular/8.png" type="Texture" id=3]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://NES - Monopoly - Money.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 11
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 11
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="mapa" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo-Celular" type="Sprite" parent="."]
position = Vector2( 312.5, 180 )
scale = Vector2( 0.350521, 0.357407 )
texture = ExtResource( 2 )

[node name="mapaCelular" type="Sprite" parent="."]
position = Vector2( 290, 220 )
scale = Vector2( 0.508, 0.508 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="mapaCelular"]
margin_left = 14.0
margin_top = 151.0
margin_right = 69.0
margin_bottom = 213.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="casa" type="Button" parent="."]
margin_left = 259.0
margin_top = 97.0
margin_right = 390.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( -389, 47 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="academia" type="Button" parent="."]
margin_left = 261.0
margin_top = 144.0
margin_right = 388.0
margin_bottom = 172.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="banco" type="Button" parent="."]
margin_left = 261.0
margin_top = 192.0
margin_right = 389.0
margin_bottom = 221.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mercado" type="Button" parent="."]
margin_left = 260.0
margin_top = 242.0
margin_right = 389.0
margin_bottom = 271.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="."]
margin_left = 352.0
margin_top = 270.0
margin_right = 372.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 1 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="din_sprite" type="Sprite" parent="Price"]
position = Vector2( -16, 8 )
rotation = 1.57429
scale = Vector2( 0.75, 0.883333 )
texture = ExtResource( 5 )
hframes = 7
frame = 3

[node name="dindin" type="Label" parent="."]
margin_left = 267.0
margin_top = 270.0
margin_right = 287.0
margin_bottom = 287.0
custom_fonts/font = SubResource( 2 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="din_sprite" type="Sprite" parent="dindin"]
position = Vector2( -16, 8 )
rotation = 1.57429
scale = Vector2( 0.75, 0.883333 )
texture = ExtResource( 5 )
hframes = 7
frame = 3

[connection signal="pressed" from="mapaCelular/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="casa" to="." method="_on_casa_pressed"]
[connection signal="pressed" from="academia" to="." method="_on_academia_pressed"]
[connection signal="pressed" from="banco" to="." method="_on_banco_pressed"]
[connection signal="pressed" from="mercado" to="." method="_on_mercado_pressed"]
